--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+        <meta charset="UTF-8">
+        <title>My cool page</title>
+</head>
+<body>
+        <h1>My very cool page</h1>
+        <h2>Hello world! How are you?</h2>
+        <h1>My very cool page is the best now</h1>
+        <h2>Hello world!</h2>
+</body>
+</html>
