--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <h2>Hello world! How are you?</h2>
         <h1>My very cool page is the best now</h1>
         <h2>Hello world!</h2>
+        <p>Master Lorem Ipsum.</p>
 </body>
 </html>
