Change page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
         <meta charset="UTF-8">
-        <title>My cool page is</title>
+        <title>The best page on the world</title>
 </head>
 <body>
         <h1>My very cool page</h1>
