--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>My favorite page is only my</title>
 </head>
 <body>
-        <h1>My very cool page</h1>
+        <h1>My very cool page is better today</h1>
         <h2>Hello world! How are you?</h2>
         <h1>My very cool page is better today than yeasteerday</h1>
         <h2>Hello world!</h2>
